hphp/hack/test/typecheck/goto/goto_label_mid_statement.php
<?hh // partial

function test(): void {
  $x = 5 + L0:
}
